--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-This is test.
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Test</title>
+	</head>
+	<body>
+		<h1>Hello, World!</h1>
+	</body>
+</html>
